--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Typescript & MySQL REST API (Nodejs & Express)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "nodemon src/index.ts --exec ts-node"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,15 @@
   "homepage": "https://github.com/devHawk42/TSRestAPI#readme",
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/morgan": "^1.7.35",
     "nodemon": "^1.19.0",
+    "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "@types/mysql2": "github:types/mysql2",
+    "express": "^4.16.4",
+    "morgan": "^1.9.1",
+    "mysql2": "^1.6.5"
   }
 }
